@@ -1,3 +1,7 @@
+2020-11-22  Robby Stephenson  <robby@periapsis.org>
+
+	* Added barcode searching to MusicBrainz data source (Bug 429483).
+
 2020-09-22  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed crashing bug when checking in a loan (Bug 426815).
